CMW-266/track_bid_escrow_job_offers
Basic implementation of tracking job_offers
