# apps/api/router.go
@@ -43,6 +43,7 @@ func NewRouter(
 	votingHandler := handlers.NewVoting(entityManager)
 	settingHandler := handlers.NewSetting(entityManager)
 	accountHandler := handlers.NewAccount(entityManager)
+	jobOffersHandler := handlers.NewJobOffer(entityManager)
 
 	router.Get("/accounts/{address}/total-reputation-snapshots", reputationHandler.HandleGetTotalReputationSnapshots)
 	router.Get("/accounts/{address}/votes", accountHandler.HandleGetAccountVotes)
@@ -53,6 +54,7 @@ func NewRouter(
 	router.Get("/votings/{voting_id}/votes", votingHandler.HandleGetVotingVotes)
 
 	router.Get("/settings", settingHandler.HandleGetSettings)
+	router.Get("/job_offers", jobOffersHandler.HandleGetJobOffers)
 
 	swaggerHost := string(cfg.Addr)
 	if envHost := os.Getenv("SWAGGER_HOST"); envHost != "" {
