# internal/dao/persistence/entity_manager.go
@@ -15,6 +15,7 @@ type EntityManager interface {
 	TotalReputationSnapshotRepository() repositories.TotalReputationSnapshot
 	VoteRepository() repositories.Vote
 	VotingRepository() repositories.Voting
+	JobOfferRepository() repositories.JobOffer
 	SettingRepository() repositories.Setting
 	AccountRepository() repositories.Account
 }
@@ -26,6 +27,7 @@ type entityManager struct {
 	votingRepository            repositories.Voting
 	settingRepository           repositories.Setting
 	accountRepo                 repositories.Account
+	jobOfferRepo                repositories.JobOffer
 }
 
 func NewEntityManager(db *sqlx.DB, hashes utils.DAOContractsMetadata) EntityManager {
@@ -36,6 +38,7 @@ func NewEntityManager(db *sqlx.DB, hashes utils.DAOContractsMetadata) EntityMana
 		votingRepository:            repositories.NewVoting(db),
 		settingRepository:           repositories.NewSetting(db),
 		accountRepo:                 repositories.NewAccount(db),
+		jobOfferRepo:                repositories.NewJobOffer(db),
 	}
 }
 
@@ -61,4 +64,8 @@ func (e entityManager) AccountRepository() repositories.Account {
 
 func (e entityManager) TotalReputationSnapshotRepository() repositories.TotalReputationSnapshot {
 	return e.totalReputationSnapshotRepo
+}
+
+func (e entityManager) JobOfferRepository() repositories.JobOffer {
+	return e.jobOfferRepo
 }
